--- a/carrito-compra/index.html
+++ b/carrito-compra/index.html
@@ -24,7 +24,7 @@
                     <div class="info-cant-productos">
                         <span>
                             <div class="cant-producto-carrito">1 kg
-                                <p class="titulo-producto-carrito"> pan hallulla</p>
+                                <p class="titulo-producto-carrito"> Pan Hallulla</p>
                                 <span class="precio-compra-carrito">
                                     $1980
                                 </span>
@@ -37,7 +37,7 @@
                       
                 </div>
                 <div class="cant-total">
-                    <h3>total</h3>
+                    <h3>Total</h3>
                     <span id="total-pagar">$1.980</span>
                 </div>
               </div>              
@@ -52,7 +52,7 @@
             <div class="info-producto">
                 <h2>Pan Hallulla</h2>
                 <p class="precio">$1.980 x kg</p>
-                <button>añadir al carrito</button>
+                <button>Agregar</button>
             </div>
         </div>
         <div class="item">
@@ -62,7 +62,7 @@
             <div class="info-producto">
                 <h2>Pan Baguette</h2>
                 <p class="precio">$1.500 x Un</p>
-                <button>Agregarlo</button>
+                <button>Agregar</button>
             </div>
         </div><div class="item">
             <figure>
@@ -111,6 +111,7 @@
             </div>
         </div>
         
+
     </div>
 
     <script src="index.js"></script>
