--- a/innovacion/inno.html
+++ b/innovacion/inno.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Personalización</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Innovación</title>
+    <link rel="stylesheet" href="inno.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <p class="logo">Personalización<img src="../png/LogoTrigo.png" alt="#" class="trigo"></p>
+            <p class="logo">Innovación<img src="../png/LogoTrigo.png" alt="#" class="trigo"></p>
             <nav>
                 <a href="../index.html#nuestros-servicios">Volver </a>
                 <a href="../contacto/index.html">Contacto</a>
@@ -20,13 +20,11 @@
             <div class="img-container"></div>
             <div class="texto">
 
-                <h2>Persona<span class="color-acento">lizacion</span></h2>
-                <p>En nuestros establecimientos personalizamos cualquier tipo de Pan, sobre todo nuestras tartas, 
-                    en las que incluimos nombres, fotos etc.En conclusión, la personalización puede ser una gran estrategia 
-                    para diferenciarse en el mercado de panadería y hacer que los clientes se sientan especiales y únicos. Al ofrecer 
-                    opciones personalizadas como la creación de panes, la decoración de pasteles y las cestas de regalo personalizadas, se puede 
-                    crear una experiencia única y memorable para los clientes que seguramente los hará volver.
-                </p>
+                <h2>Inno<span class="color-acento">vacion</span></h2>
+                <p>Apostamos por la innovación y el desarrollo de nuevos productos, diferenciales, 
+                    que destaquen tanto por su sabor y calidad.La panadería ha sido un negocio tradicional 
+                    durante muchos años, pero con el avance de la tecnología y la creciente demanda de productos saludables, hay una gran oportunidad de innovar en este sector. En lugar de simplemente ofrecer panes y pasteles tradicionales, nuestra panadería podría ofrecer una amplia variedad de productos innovadores y saludables que atraigan a una base de clientes cada vez mayor.
+                    Una posible idea es crear una línea de productos sin gluten o sin azúcar, para aquellos que tienen necesidades dietéticas especiales. También podríamos utilizar ingredientes orgánicos y de origen local, para atraer a aquellos que buscan alimentos más saludables y sostenibles. Además, podríamos ofrecer opciones veganas y vegetarianas, para atraer a aquellos que buscan opciones más éticas</p>
             </div>
         </div>
     </section>
